@@ -2,6 +2,9 @@ Open Vehicle Monitor System v3 - Change log
 
 ????-??-?? ???  ???????  OTA release
 
+2022-03-13
+- Toyota RAV4 EV: Initial support added. Only the Tesla bus is decoded and just listening so far.
+
 2022-03-07 MWJ  3.3.002  OTA release
 - Maxus eDeliver3: Updated speed PID
 - Bolt EV: Add early Bolt EV support
